--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@
             }
         }
        .card_txt{
+        color: #fff;
         h4{
             font-size: 32px;
             font-weight: 600;
